# m-choose-n-words

./: CMakeLists.txt  README.md
include/: calculations.hpp  timer.hpp
source/: calculations.cpp  main.cpp
test/: test_calculations.cpp
